[package]
name = "tantiny"
version = "0.4.0" # {x-release-please-version}
edition = "2021"
authors = ["Sylvain Utard", "Alexander Baygeldin"]
repository = "https://github.com/altertable-ai/tantiny"

[lib]
name = "tantiny"
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
tantivy = "0.25"
lazy_static = "1.4"
paste = "1.0"
time = { version = "0.3", features = ["parsing", "formatting"] }
levenshtein_automata = "0.2.1"

[package.metadata.thermite]
github_releases = true
github_release_type = "latest"
git_tag_regex = "^v(\\d+\\.\\d+\\.\\d+)$"
